--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ gradle/scripts/artifacts.gradle
 gradle/scripts/dependencies.gradle
 gradle/wrapper/gradle-wrapper.jar
 gradle/wrapper/gradle-wrapper.properties
+build.gradle
