--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+		maven {
+        url 'http://maven.blamejared.com'
+    }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
@@ -27,7 +30,7 @@ apply plugin: 'java'
 
 //def BUILD_NUMBER = System.getenv("BUILD_NUMBER") ?: "0"
 //def mod_version = "0.7.1.$BUILD_NUMBER"
-def mod_version = "0.7.6";
+def mod_version = "0.7.7";
 
 version = "1.12.2-$mod_version"
 
@@ -113,6 +116,7 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
 
     deobfCompile group: 'mcp.mobius.waila', name: 'Hwyla', version: '1.8.26-B41_1.12.2'
+	deobfCompile 'CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.11.494'
 }
 
 processResources {
