--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url 'http://files.minecraftforge.net/maven' }
-        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url = "http://files.minecraftforge.net/maven" }
+        maven { url "https://plugins.gradle.org/m2/" }
         maven { url 'http://maven.blamejared.com' }
     }
     dependencies {
@@ -15,11 +15,17 @@ plugins {
     id 'maven'
     id 'maven-publish'
     id 'java'
+//    id 'net.minecrell.licenser' version '0.4.1'
+    id "com.hrznstudio.cursegradle" version "1.1.0"
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'com.selesse.git.changelog'
 apply plugin: 'java'
 
+//defaultTasks 'licenseFormat'
+
+//def BUILD_NUMBER = System.getenv("BUILD_NUMBER") ?: "0"
+//def mod_version = "0.7.1.$BUILD_NUMBER"
 def mod_version = "0.7.8";
 
 version = "1.12.2-$mod_version"
@@ -31,6 +37,19 @@ static def getCurrentYear() {
     def date = new Date()
     return date.format('yyyy')
 }
+
+//license {
+//    ext {
+//        name = "MatterOverdrive: Fixed Horizon Edition"
+//        organization = "Horizon Studio"
+//        email = "contact@hrznstudio.com"
+//        url = "https://hrznstudio.com"
+//        year = getCurrentYear()
+//    }
+//
+//    header = file('HEADER')
+//    include '**/*.java'
+//}
 
 changelog {
     title = "${archivesBaseName} - Changelog"
@@ -78,12 +97,12 @@ repositories {
         name "tterrag"
         url "http://maven.tterrag.com"
     }
-	maven {
+    maven {url "http://maven.tehnut.info"}
+    maven {url "http://modmaven.k-4u.nl"}
+    maven {
         name "progwml6"
         url "http://dvs1.progwml6.com/files/maven"
     }
-    maven {url "http://maven.tehnut.info"}
-    maven {url "http://modmaven.k-4u.nl"}
 }
 
 dependencies {
@@ -109,6 +128,7 @@ processResources {
         exclude 'mcmod.info'
     }
 }
+
 
 jar {
     classifier = "universal"
@@ -143,4 +163,47 @@ task apiJar(type: Jar) {
 artifacts {
     archives deobfJar
     archives apiJar
+}
+
+curseforge {
+    if(System.getenv('HRZN_CURSE_KEY'))
+        apiKey = System.getenv('HRZN_CURSE_KEY')
+    else
+        apiKey = "NONE"
+    project {
+        apiUrl="https://minecraft.curseforge.com"
+        id = '308192'
+        changelog = file('CHANGELOG.md')
+        releaseType = 'release'
+        mainArtifact jar
+        addArtifact apiJar
+        addGameVersion '1.12.2'
+    }
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "file://$buildDir/repo")
+
+            pom {
+                groupId = project.group
+                version = project.version
+                artifactId = 'matteroverdrive-legacy-edition'
+                project {
+                    name "Matter Overdrive: Legacy Edition"
+                    packaging 'jar'
+                    description 'Legacy Edition of Matter Overdrive'
+                    url 'https://hrznstudio.com/mo'
+                    developers {
+                        developer {
+                            id 'coded'
+                            name 'Coded'
+                            roles {role 'developer'}
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
