--- a/src/main/resources/META-INF/mo_at.cfg
+++ b/src/main/resources/META-INF/mo_at.cfg
@@ -1,3 +1,11 @@
+# Custom player model
+public net.minecraft.client.renderer.entity.RenderPlayer field_177140_a # smallArms
+public net.minecraft.client.renderer.ItemRenderer field_187467_d # itemStackMainHand
+public net.minecraft.client.renderer.ItemRenderer field_187468_e # itemStackOffHand
+public net.minecraft.client.renderer.ItemRenderer field_187469_f # equippedProgressMainHand
+public net.minecraft.client.renderer.ItemRenderer field_187470_g # prevEquippedProgressMainHand
+public net.minecraft.client.renderer.ItemRenderer field_187471_h # equippedProgressOffHand
+public net.minecraft.client.renderer.ItemRenderer field_187472_i # prevEquippedProgressOffHand
 
 public net.minecraft.client.renderer.texture.TextureMap field_94252_e # mapUploadedSprites
 public net.minecraft.client.renderer.texture.TextureMap field_94258_i # listAnimatedSprites
