--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,6 @@ repositories {
         name "tterrag"
         url "http://maven.tterrag.com"
     }
-    maven {url "http://maven.tehnut.info"}
     maven {url "http://modmaven.k-4u.nl"}
     maven {
         name "progwml6"
@@ -106,6 +105,7 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
 
     deobfCompile group: 'mcp.mobius.waila', name: 'Hwyla', version: '1.8.26-B41_1.12.2'
+    deobfCompile 'CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.11.494'
 }
 
 processResources {
