--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -81,7 +81,7 @@ body:
   - type: input
     id: version
     attributes:
-      label: Matter Overdrive: Community Edition Version
+      label: Matter Overdrive Community Edition Version
       placeholder: "0.8.4"
     validations:
       required: true
